[package]
name = "picrs-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
picrs-lib = "0.1.1"
bevy = { version = "0.18.0", default-features = false, features = ["dynamic_linking", "2d", "debug"] }
#use for release
#bevy = { version = "0.18.0", default-features = false, features = "2d"}

#for when using wasm
#getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
